--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,9 @@
   <link rel="icon" href="{% static '/images/namung_logo.png' %}">
   <!-- CSS only -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-{% block css %}{% endblock css %}
+{% block css %}
+<link rel="icon" href="https://templates.pingendo.com/assets/Pingendo_favicon.ico">
+{% endblock css %}
 
 </head>
 <body>
