--- a/static/CSS/mainpage.css
+++ b/static/CSS/mainpage.css
@@ -68,9 +68,9 @@ body {
   font-size: 1rem;
   font-weight: 400;
   line-height: 1.5;
-  color: #212529;
+  color: #c17f34;
   text-align: left;
-  background-color: #fff;
+  background-color: #544b44;
 }
 
 [tabindex="-1"]:focus {
@@ -12080,4 +12080,8 @@ textarea.form-control {
   border: 1px solid transparent;
   background: #6807f9;
   color: #fff;
+}
+
+.banner {
+  border-radius: 50px;
 }
