--- a/main/templates/main/main.html
+++ b/main/templates/main/main.html
@@ -5,13 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NAMUNG : 네이멍</title>
+    <title>네이멍 : NAMUNG</title>
     <link rel="icon" href="{% static '/images/namung_logo.png' %}">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="{% static 'CSS/mainpage.css' %}" />
+    <link rel="stylesheet" href="{% static 'CSS/mainpage.css' %}">
 </head>
-<body>
+<body class="">
     <section class="ftco-section">
         <div class="container">
             <div class="row justify-content-center">
@@ -42,7 +42,7 @@
                 </div>
             </div>
             <a href="{% url 'info:deserted' %}">
-            <img src="{% static 'images/adopt.png' %}" alt="DogAdopt" class="mt-4" width="100%" height="auto"></a>
+            <img src="{{ banner }}" alt="DogAdopt" class="mt-4 banner" width="100%" height="auto"></a>
         </div>
     </section>
     <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
