ADD : 메인페이지 좌측배너 추가

--- a/main/templates/main/main.html
+++ b/main/templates/main/main.html
@@ -43,8 +43,14 @@
             </div>
             <a href="{% url 'info:deserted' %}">
             <img src="{{ banner }}" alt="DogAdopt" class="mt-4 banner" width="100%" height="auto"></a>
+
         </div>
+
     </section>
+    <aside class="floating">
+        <a href="{% url 'info:hospital' %}">
+            <img src="{{ aside }}" alt="DogAdopt" class="mt-4 banner2" width="150px" height="auto"></a>
+    </aside>
     <script src="{% static 'js/jquery-3.3.1.min.js' %}"></script>
     <script src="{% static 'js/popper.js' %}"></script>
     <script src="{% static 'js/bootstrap.min.js' %}"></script>
