STYLE : main, calendar CSS 추가

--- a/main/templates/main/main.html
+++ b/main/templates/main/main.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <link rel="stylesheet" href="{% static 'CSS/mainpage.css' %}">
 </head>
-<body class="">
+<body class="container" style="background-color:#544B44;">
     <section class="ftco-section">
         <div class="container">
             <div class="row justify-content-center">
@@ -27,15 +27,15 @@
                             <div class="row justify-content-center py-md-5">
                                 <div class="col-lg-9">
                                     <div class="w-100">
-                                        <p class="mt-4">계정이 있어요! <a href="{% url 'accounts:login' %}">LOG IN</a></p>
+                                        <p class="mt-4">계정이 있어요! <a href="{% url 'accounts:login' %}" class="enter">LOG IN</a></p>
                                     </div>
                                     <div class="w-100">
-                                        <p class="mt-4">새로 오셨나봐요? <a href="{% url 'accounts:signup' %}">Sign Up</a></p>
+                                        <p class="mt-4">새로 오셨나봐요? <a href="{% url 'accounts:signup' %} " class="enter">Sign Up</a></p>
                                     </div>
                                 </div>
                             </div>
                             <div class="row justify-content-center py-md-5">
-                                <p class="mt-4 button">들어가기 <a href="{% url 'reviews:index'  %}">ENTER</a></p>
+                                <p class="mt-4 button">들어가기 <a href="{% url 'reviews:index'  %}" class="enter">ENTER</a></p>
                             </div>
                         </div>
                     </div>
