FIX: 리뷰 인덱스 프론트 및 댓글 검색 기능 등등.....

--- a/reviews/templates/reviews/index.html
+++ b/reviews/templates/reviews/index.html
@@ -3,72 +3,113 @@
 {% load static %}
 {% block content %}
 
+{% block css %}
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+<link rel="icon" href="https://templates.pingendo.com/assets/Pingendo_favicon.ico">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+{% endblock css %}
 
 <head>
-{% block css %}
-<link rel="icon" href="https://templates.pingendo.com/assets/Pingendo_favicon.ico">
-{% endblock css %}
-  
   {% csrf_token %}
 </head>
 
-<div class=" d-flex m-4 py-4 px-2 ">
+<div class=" d-flex justify-content-center m-4 py-4 px-2">
 
-  <form method='search' action=''>
-    {% csrf_token %}
-    <input type="" name="search_button" value="검색" style="background-color: rgb(242, 242, 242)">
-  </form>
+{% comment %} 검색기능 {% endcomment %}
+<form action="{% url 'reviews:index'%}" role='search' id='searchfunc1'>
+  <input type="text" id="search-type-01" name='search'>
+  <button type="submit"><i class="fas fa-search"></i></button>
+</form>
+
   <a href="{% url 'reviews:create' %}"><button type="button" class="btn btn-primary">글쓰기</button></a>
+  
   {% comment %} 리뷰 글 반복 {% endcomment %}
-  <div>
-    <ul class="list-group list-group-flush">
+<div style="display: flex; flex-direction: row;text-align: center; justify-content: center;padding-top: 60px; background-color:#FAFAFA">
+  <div style="width: 500px;min-width: 500px;margin-right: 300px">
+    <div class="feed_box">
       {% for review in reviews %}
-      <li class="list-group-item">
-        {% comment %} 제목 {% endcomment %}
-        <a href="{% url 'reviews:detail' review.pk %}" ><div>{{ review.title }}</div>
+      {% comment %} 작성자 프로필 사진 및 이름 {% endcomment %}
+      <div style="display: flex;flex-direction: row; align-items: center; margin: 50px">
+          <div class="box" style="width: auto; height: auto">
+            <a href="{% url 'accounts:profile' user %}" style='color :black;' ><img class="profile" src="{{ review.user.profile.url }} " style='border-radius: 100%;'></a>
+            
+          </div>
+          <div class='d-flex justify-content: space-around'><a href="{% url 'accounts:profile' user %}" style='color :black;' > <b>{{ user.username }}</b></a>
+            </div><p class='ms-auto'>{{ review.created_at }}</p>
+      </div>
+      <div>
 
-        {% comment %} 글 작성일 {% endcomment %}
-        <p>{{ review.created_at }}</p>
-
-        {% comment %} 사진 {% endcomment %}
-        {% if review.image %}
-        {% for i in review.image.all %}
-            <img src="{{ i.image.url }}" /><br />
-
-            {% endfor %}
-        {% endif %}
-
-
-        {% comment %} 내용 {% endcomment %}
-        <p>{{ review.content }}</p></a>
-
-        {% comment %} 좋아요 {% endcomment %}
-         {% if request.user.is_authenticated %}
-        <div class="  d-flex justify-content-between" id="review_like_{{ review.id }}" >
-            <form data-review-id='{{ review.pk }}' id='like-btn' class="like-heart" >
-                {% csrf_token %}
-                <button style='background-color:transparent; border:none;' class='review-detail-like-btn' type='submit' review_id="{{ review.id }}">
-                    {% if request.user in review.like_users.all %}
-                    <i style='color:red' class="bi bi-heart-fill"></i>
-                    <span id='review-like-user-cnt'>{{ review.like_users.count }}</span>
-                    {% else %}
-                    <i style='color:red' class="bi bi-heart"></i>
-                    <span id='review-like-user-cnt'>{{ review.like_users.count }}</span>
-                    {% endif %}
-                </button>
-            </form>
-            {% endif %}
-      <li>
-        {% comment %} 댓글 리스트 {% endcomment %}
-       {% for comment in  review.comment_set.all %}
-       <div class='py-3'>
-           <div id="review-content" class="me-3-5 mt-3 text-break align-items-center" >
-               {{ comment.user.username }} : {{ comment.content }}
-               <p id="review-content" class="d-flex justify-content-end" >{{ comment.created_at }}</p>
+         {% comment %} 사진 {% endcomment %}
+         {% if review.image %}
+         <div id="carouselExampleControls-{{ review.pk }}" class="carousel slide" data-ride="carousel" style="width: 100%">
+           <div class="carousel-inner bg-dark"  style='width : 100%; height : 300px;'>
+             {% for photo in review.image.all %}
+       
+               <div class="carousel-item {% if forloop.counter == 1 %} active {% endif %}" style='width : 100%; height : 50%;'>
+                 <img class='carousel-image' src="{{ photo.image.url }}" alt="" style=' width : 100%; height : 200%;' >
+               </div>
+             {% endfor %}
+       
            </div>
-       {% endfor %}
-      {% endfor %}
-       </li>
+       
+           <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls-{{ review.pk }}" data-bs-slide="prev">
+             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+             <span class="visually-hidden">Previous</span>
+           </button>
+           <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls-{{ review.pk }}" data-bs-slide="next">
+             <span class="carousel-control-next-icon" aria-hidden="true"></span>
+             <span class="visually-hidden">Next</span>
+           </button>
+          </div>
+ 
+         {% endif %}
+
+      </div>
+      {% comment %} 좋아요 {% endcomment %}
+      <div style="margin: 0 20px;display: flex; flex-direction: row; justify-content: space-between">
+        <div>
+          {% if request.user.is_authenticated %}
+          <form class="like-form"  data-review-id="{{ review.pk }}">
+            {% csrf_token %}
+            {% if request.user in review.like_users.all %}
+              <button class="btn border-0 ms-3" style="background-color: transparent;" type="submit" id="like-review-{{ review.pk }}">
+                <i style='color:red' id="like-i-{{ review.pk }}" class="like-fficial bi bi-suit-heart-fill"></i>
+                <span id="like-count-{{ review.pk }}">{{ review.like_users.count }}</span>
+              </button>
+            {% else %}
+              <button class="btn border-0 ms-3" style="background-color: transparent;" type="submit" id="like-review-{{ review.pk }}">
+                <i style='color:red' id="like-i-{{ review.pk }}" class="like-fficial bi bi-suit-heart"></i>
+                <span id="like-count-{{ review.pk }}">{{ review.like_users.count }}</span>
+              </button>
+            {% endif %}
+          </form>
+        {% endif %}
+        
+     
+        </div>
+        <div style="margin: 0 20px;text-align: left;font-size: 14px"> <b> {{ review.like_users.count }}명</b>이
+          좋아합니다.
+        </div>
+    </div>
+    {% comment %} 제목 및 글 내용 {% endcomment %}
+    <div style="margin: 0 20px;text-align: left;font-size: 16px " class='mb-2'>
+      <b> <h5>{{ review.title|truncatechars:10 }} </h5></b>
+      <b>{{ user.username }}</b> {{ review.content|truncatechars:15 }}
+    </div>
+    <small > <a style='color :black;' class='text-decoration-none ' href="{% url 'reviews:detail' review.pk %}">댓글 모두 보기</a> </small>
+    {% comment %} 댓글 {% endcomment %}
+      <div id="review-content_{{ review.id }}" class='mt-3'>
+        {% for comment in  review.comment_set.all %}
+        {% if forloop.counter < 5  %}
+        <div style="margin: 0 20px;text-align: left;font-size: 14px">
+          <b>{{ comment.user.username }} </b> {{ comment.content|truncatechars:20 }}</div>
+          {% else %}
+                {% endif %}
+        {% endfor %}
+      </div>
+      
+  
         
         {% comment %} 댓글작성 {% endcomment %}
 
@@ -80,12 +121,13 @@
                style="width: 50px;color: cornflowerblue; font-weight: bold">
                게시
         </div>
-    </div>
+        </div>
         </li>
-      
-    </ul>
+        {% endfor %}
+    </div>
 
   </div>
+</div>
 
 </div>
 {% comment %} 페이지네이션 {% endcomment %}
@@ -136,44 +178,55 @@
 <script src="https://code.jquery.com/jquery-3.2.1.min.js" integrity="sha384-xBuQ/xzmlsLoJpyjoggmTEz8OWUFM0/RC5BsqQBDX2v5cMvDHcMakNTNrHIW2I5f" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 <script>
-  const likeBtn = document.querySelector('#like-btn')
-  const csrftoken = document.querySelector('[name=csrfmiddlewaretoken]').value;
-  
-  
+  // 좋아요
+  const form = document.querySelectorAll('.like-form')
+  console.log(form)
+  const csrftokens = document
+    .querySelector('[name=csrfmiddlewaretoken]')
+    .value
 
-    console.log(likeBtn)
-    // (2) 좋아요 버튼을 클릭하면, 함수 실행
-    likeBtn.addEventListener('click', function (event) {3
-        let review_id = event.target.attributes.getNamedItem('review_id').value;
-        // 서버로 비동기 요청(axios)을 하고 싶음
+    form
+    .forEach((form) => {
+      form.addEventListener('submit', function (event) {
         event.preventDefault()
-        console.log(event.currentTarget.dataset.reviewId)
-        axios({
-            method: 'post',
-            url: `/reviews/${event.currentTarget.dataset.reviewId}/like/`,
-            headers: { 'X-CSRFToken': csrftoken },
-            review_id: review_id,
-           
+        const reviewId = event.target.dataset.reviewId
+        
 
+          axios({
+            method: 'post',
+            url: `/reviews/${reviewId}/like/`,
+            headers: {
+              'X-CSRFToken': csrftokens
+            }
+          })
+          .then((response) => {
+            const isLiked = response.data.is_liked
+            const likeBtn = document.querySelector(`#like-i-${reviewId}`)
+            if (isLiked === true) {
+              likeBtn
+                .classList
+                .remove('bi-suit-heart')
+              likeBtn
+                .classList
+                .add('bi-suit-heart-fill')
+            } else {
+              likeBtn
+                .classList
+                .remove('bi-suit-heart-fill')
+              likeBtn
+                .classList
+                .add('bi-suit-heart')
+            }
+            const likeCountTag = document.querySelector(`#like-count-${reviewId}`)
+            const likeCount = response.data.likeCount
+            likeCountTag.innerText = likeCount
+          })
+          .catch((error) => {
+            console.log(error.response)
+          })
         })
-            .then(response => {
-                console.log(response)
-                console.log(response.data)
-                const likeReview = document.querySelector('#like-btn > button > i')
-                likeReview.classList.toggle('bi-heart')
-                likeReview.classList.toggle('bi-heart-fill')
-                // 다음 주석 처리한 내용과 동일
-                // if (response.data.isLiked === true) {
-                //     event.target.classList.add('bi-heart-fill')
-                //     event.target.classList.remove('bi-heart')
-                // } else {
-                //     event.target.classList.add('bi-heart')
-                //     event.target.classList.remove('bi-heart-fill')
-                // }
-                const likeCount = document.querySelector('#review-like-user-cnt')
-                likeCount.innerText = response.data.likeCount
-            })
     })
+
 
 
   $(".upload_reply").click(function (event) {
