--- a/reviews/templates/reviews/detail.html
+++ b/reviews/templates/reviews/detail.html
@@ -67,8 +67,33 @@
         <div class='py-3'>
             <div id="review-content" class="me-3-5 mt-3 text-break align-items-center" >
                 {{ comment.user.username }} : {{ comment.content }}
+                <small class="text-muted">
+                    <i style='color:red' class="bi bi-heart-fill" id="like-count-{{ comment.pk }}">좋아요 {{ comment.like_users.all|length }}개</i>
+                </small>
+
+                {% comment %} 좋아요 버튼 {% endcomment %}
+                {% if request.user.is_authenticated %}
+                <form class="like-form" data-comment-id="{{ comment.pk }}" data-review-id="{{ review.pk }}">
+                  {% csrf_token %}
+                  {% if request.user in comment.like_users.all %}
+                    <button class="btn border-0 ms-3" style="background-color: transparent;" type="submit" id="like-comment-{{ comment.pk }}">
+                      <i style='color:red' id="like-i-{{ comment.pk }}" class="like-fficial bi bi-suit-heart-fill"></i>
+                    </button>
+                  {% else %}
+                    <button class="btn border-0 ms-3" style="background-color: transparent;" type="submit" id="like-comment-{{ comment.pk }}">
+                      <i style='color:red' id="like-i-{{ comment.pk }}" class="like-fficial bi bi-suit-heart"></i>
+                    </button>
+                  {% endif %}
+                </form>
+              {% endif %}
+
                 <p id="review-content" class="d-flex justify-content-end" >{{ comment.created_at }}</p>
+             
+                
+              </div>
+                
             </div>
+           
 
             {% comment %} 댓글을 작성한 user가 리뷰를 쓴 유저인 경우 {% endcomment %}
             {% if user.is_authenticated and comment.user == request.user %}
@@ -79,8 +104,69 @@
             {% endif %}
             {% empty %}
             <br>
+
         </div>
         {% endfor %}
+
+
+
+
+
+<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+<script>
+    // 좋아요
+    const form = document.querySelectorAll('.like-form')
+    console.log(form)
+    const csrftokens = document
+      .querySelector('[name=csrfmiddlewaretoken]')
+      .value
+
+      form
+      .forEach((form) => {
+        form.addEventListener('submit', function (event) {
+          event.preventDefault()
+          const reviewId = event.target.dataset.reviewId
+          const commentId = event
+            .target
+            .dataset
+            .commentId
+
+            axios({
+              method: 'post',
+              url: `/reviews/${reviewId}/${commentId}/likes/`,
+              headers: {
+                'X-CSRFToken': csrftokens
+              }
+            })
+            .then((response) => {
+              const isLiked = response.data.is_liked
+              const likeBtn = document.querySelector(`#like-i-${commentId}`)
+              if (isLiked === true) {
+                likeBtn
+                  .classList
+                  .remove('bi-suit-heart')
+                likeBtn
+                  .classList
+                  .add('bi-suit-heart-fill')
+              } else {
+                likeBtn
+                  .classList
+                  .remove('bi-suit-heart-fill')
+                likeBtn
+                  .classList
+                  .add('bi-suit-heart')
+              }
+              const likeCountTag = document.querySelector(`#like-count-${commentId}`)
+              const likeCount = response.data.likeCount
+              likeCountTag.innerText = likeCount
+            })
+            .catch((error) => {
+              console.log(error.response)
+            })
+          })
+      })
+  </script>
+
 
 
 {% endblock content %}
